Fix DHT tracker overlaying bottom of the app & set z-index to force it on top if it happens again
Closes #181

--- a/app/Resources/Tracker/styles/controller.css
+++ b/app/Resources/Tracker/styles/controller.css
@@ -1,4 +1,4 @@
-#app-mount > div[class*="app-"] {
+#app-mount div[class*="app-"] {
   margin-bottom: 48px !important;
 }
 
@@ -8,6 +8,7 @@
   width: 100%;
   height: 48px;
   background-color: #fff;
+  z-index: 1000000;
 }
 
 #dht-ctrl button {
